# mcp-legifrance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/legifrance_mcp/: __init__.py  __main__.py  config.py  logging_setup.py  server.py
src/legifrance_mcp/client/: auth.py  errors.py  http.py
src/legifrance_mcp/schemas/: common.py
src/legifrance_mcp/tools/: __init__.py  get_article.py  get_code_toc.py  get_jorf.py  get_section.py  loda.py  search.py
tests/: conftest.py  test_e2e.py  test_unit.py
